# MBSNetwork

./: .dockerignore  .env  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.devcontainer/: devcontainer.json
backup/: restore.sh
data/alignments/preliminary/: alignments_0_4.npy  global_registration.npy  random_alignments.npy
data/analysis/: alignment_performance.csv  bimodal_overlap.npy  ec_distribution_filtered.npz  ec_distribution_full.npz  heuristic_alignment_0_4.npy  ligand_distribution_filtered.npz  ligand_distribution_full.npz  rmsd_density.npz  standard_alignment_0_4.npy
data/analysis/drugs/: predicted_off_targets.csv  proximal_drugs.csv  residue_mbs_map.json  volcano_data.csv
data/networks/MBSNetwork/: ec_to_ec_distribution_3.npz  ec_zscores_3.npz  geometry_conserved_sequence_divergent_pairs.npy  geometry_conserved_sequence_divergent_pairs.tsv  ligand_to_ligand_distribution.npz  ligand_zscores.npz
figures/manuscript/: Fig1.tif  Fig10.tif  Fig11.tif  Fig2.tif  Fig3.tif  Fig4.tif  Fig5.tif  Fig6.tif  Fig7.tif  Fig8.tif  Fig9.tif
src/: cli.py  config.py  logger.py
src/alignment/: alignment.py  global.py  realignment.py  util.py
src/analysis/: dataset.py  drugs.py  preliminary.py  sequence.py
src/database/: __init__.py  queries.py
src/database/datamodel/: __init__.py  models.py
src/figures/: figures.ipynb
src/network/: cooccurrence.py  modularity.py  network.py  threshold.py  utils.py  visualization.py
src/preprocessing/: api.py  dataset.py  deposit.py  size.py  size_worker.py  structure.py  util.py
